# Stat_386_final_project

./: Documentation.qmd  README.md  TechnicalReport.qmd  Tutorial.qmd  _quarto.yml  pyproject.toml  requirements.txt
.quarto/_freeze/Tutorial/execute-results/: html.json
.quarto/idx/: Documentation.qmd.json  TechnicalReport.qmd.json  Tutorial.qmd.json  index.qmd.json
.quarto/idx/tests/: test.ipynb.json
.quarto/project-cache/: deno-kv-file
.quarto/xref/: 04cf6708  101a44a0  13af5c6f  INDEX
data/: Salt_Lake_County_housing_data.csv  utah_housing_data_ORIGINAL.csv
docs/: Documentation.html  TechnicalReport.html  Tutorial.html  index.html  search.json
docs/tests/: test.html
scripts/: _scraper_less_intensive.py  salt_lake_county.py  scraper.py
src/utah_housing_stat386/: __init__.py  cleaning.py
tests/: test.ipynb  test_cleaning.py
tests/storage/key_value_stores/default/: __CRAWLER_STATISTICS_0  __CRAWLER_STATISTICS_1  __CRAWLER_STATISTICS_2  __CRAWLER_STATISTICS_3  __CRAWLER_STATISTICS_3.__metadata__.json  __RQ_STATE_FY95b4nTvjFrtOrQN  __RQ_STATE_FY95b4nTvjFrtOrQN.__metadata__.json  __metadata__.json
tests/storage/request_queues/default/: 54880d7797bce9e.json  58de7e8d6cf5377.json  68df4da84e9293a.json  8a30f87451fa03e.json  9fd04f9642977f1.json  __metadata__.json  b4a6954d9785c75.json  d2cb2e2b63bd1dd.json
