[build-system]
requires = ["uv_build >= 0.9.5, <0.10.0"]
build-backend = "uv_build"

[project]
name = "utah-housing-stat386"
version = "0.1.0"
description = "A package to scrape Utah housing data for certain cities of Salt Lake and Utah counties"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "beautifulsoup4>=4.14.2",
    "crawlee[playwright]>=1.1.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "requests>=2.32.5",
    "streamlit>=1.52.1",
]

[project.urls]
Homepage = "https://github.com/sethfrand/Stat_386_final_project"
Repository = "https://github.com/sethfrand/Stat_386_final_project.git"
Issues = "https://github.com/sethfrand/Stat_386_final_project/issues"
